--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "lint": "eslint *.js",
     "test": "yarn lint && size-limit"
   },
+  "peerDependencies": {
+    "rxjs": ">=6.0.0-beta.0 <7"
+  },
   "devDependencies": {
     "@logux/eslint-config": "^28.2.1",
     "babel-preset-react-app": "^9.0.0",
@@ -58,9 +61,5 @@
     "rules": {
       "node/no-extraneous-require": "off"
     }
-  },
-  "dependencies": {},
-  "peerDependencies": {
-    "rxjs": "^6.5.2"
   }
 }
