--- a/package.json
+++ b/package.json
@@ -16,28 +16,30 @@
     "rxjs": ">=6.0.0-beta.0 <7"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^28.2.3",
-    "babel-preset-react-app": "^9.0.0",
-    "cross-env": "^5.2.0",
-    "eslint": "^6.0.1",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-es5": "^1.4.1",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-import-helpers": "^1.0.1",
-    "eslint-plugin-jest": "^22.7.1",
-    "eslint-plugin-node": "^9.1.0",
+    "@logux/eslint-config": "^36.0.0",
+    "@size-limit/preset-small-lib": "^4.0.2",
+    "babel-preset-react-app": "^9.1.1",
+    "cross-env": "^7.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-es5": "^1.5.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.8.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-prefer-let": "^1.0.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-standard": "^4.0.0",
-    "husky": "^2.7.0",
-    "jest": "^24.8.0",
-    "lint-staged": "^8.2.1",
-    "parcel-bundler": "^1.12.3",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "size-limit": "^1.3.7",
-    "storeon": "^0.8.7",
-    "typescript": "^3.5.2"
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-unicorn": "^16.1.1",
+    "husky": "^4.2.3",
+    "jest": "^25.1.0",
+    "lint-staged": "^10.0.7",
+    "parcel-bundler": "^1.12.4",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "size-limit": "^4.0.2",
+    "storeon": "^0.9.8",
+    "typescript": "^3.8.2"
   },
   "lint-staged": {
     "*.js": [
@@ -57,9 +59,10 @@
     }
   ],
   "eslintConfig": {
-    "extends": "@logux/eslint-config/browser",
+    "extends": "@logux/eslint-config",
     "rules": {
-      "node/no-extraneous-require": "off"
+      "node/no-extraneous-require": "off",
+      "func-style": "off"
     }
   }
 }
