--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
     "start": "rollup -c rollup.config.ts -w",
     "build": "tsc && tsc -p tsconfig.module.json",
     "lint": "eslint index.ts --fix",
+    "size": "size-limit",
     "test": "jest --coverage && yarn lint && size-limit"
   },
   "peerDependencies": {
-    "rxjs": ">=6.0.0-beta.0 <7"
+    "rxjs": ">=6.0.0-beta.0 <7",
+    "storeon": "^1.0.0"
   },
   "devDependencies": {
     "@logux/eslint-config": "^36.0.0",
     "@size-limit/preset-small-lib": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
+    "@types/jest": "^25.1.3",
+    "@types/node": "^13.7.7",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-es5": "^1.5.0",
@@ -39,14 +43,9 @@
     "husky": "^4.2.3",
     "jest": "^25.1.0",
     "lint-staged": "^10.0.7",
-    "rollup": "^1.32.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-sourcemaps": "^0.5.0",
-    "rollup-plugin-typescript2": "^0.26.0",
     "size-limit": "^4.0.2",
     "storeon": "^1.0.0",
+    "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
   },
   "lint-staged": {
@@ -63,7 +62,7 @@
   "size-limit": [
     {
       "path": "index.js",
-      "limit": "226 B"
+      "limit": "600 B"
     }
   ],
   "eslintConfig": {
