--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "target": "es5",
-    "module":"umd",
+    "module":"commonjs",
     "lib": ["es7"],
     "strict": true,
     "sourceMap": true,
