Apply staged lint on test files

--- a/package.json
+++ b/package.json
@@ -64,10 +64,8 @@
     }
   },
   "size-limit": [
-    {
-      "path": "index.js",
-      "limit": "600 B"
-    }
+    { "path": "index.js", "limit": "600 B" },
+    { "path": "module/index.js", "limit": "605 B" }
   ],
   "eslintConfig": {
     "extends": [
