--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "module": "module/index.js",
   "typings": "index.d.ts",
   "files": [
-    "dist"
+    "module",
+    "index.js",
+    "index.js.map",
+    "index.d.ts"
   ],
   "repository": "git@github.com:distolma/storeon-observable.git",
   "author": "Dmytro Mostovyi <djmakaron2009@gmail.com>",
