--- a/package.json
+++ b/package.json
@@ -29,34 +29,34 @@
   },
   "peerDependencies": {
     "rxjs": ">=6.0.0-beta.0 <7",
-    "storeon": "^1.0.0"
+    "storeon": "^2.0.0"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^36.0.0",
-    "@size-limit/preset-small-lib": "^4.0.2",
-    "@typescript-eslint/eslint-plugin": "^2.21.0",
-    "@typescript-eslint/parser": "^2.21.0",
-    "@types/jest": "^25.1.3",
-    "@types/node": "^13.7.7",
+    "@logux/eslint-config": "36.1.1",
+    "@size-limit/preset-small-lib": "^4.3.1",
+    "@types/jest": "^25.1.4",
+    "@types/node": "^13.9.0",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-es5": "^1.5.0",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jest": "^23.8.0",
+    "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prefer-let": "^1.0.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-unicorn": "^16.1.1",
+    "eslint-plugin-unicorn": "17.1.0",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
-    "lint-staged": "^10.0.7",
-    "size-limit": "^4.0.2",
-    "storeon": "^1.0.0",
+    "lint-staged": "^10.0.8",
+    "size-limit": "^4.3.1",
+    "storeon": "^2.0.1",
     "ts-jest": "^25.2.1",
-    "typescript": "^3.8.3",
-    "typedoc": "^0.16.11"
+    "typedoc": "^0.16.11",
+    "typescript": "^3.8.3"
   },
   "lint-staged": {
     "**/*.ts": [
@@ -70,8 +70,14 @@
     }
   },
   "size-limit": [
-    { "path": "index.js", "limit": "360 B" },
-    { "path": "module/index.js", "limit": "400 B" }
+    {
+      "path": "index.js",
+      "limit": "360 B"
+    },
+    {
+      "path": "module/index.js",
+      "limit": "400 B"
+    }
   ],
   "eslintConfig": {
     "extends": [
