:zap: Better tree-shaking

--- a/configs/tsconfig.cjs.json
+++ b/configs/tsconfig.cjs.json
@@ -1,9 +1,10 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "strict": false
+    "module": "commonjs",
+    "outDir": "../lib/cjs"
   },
   "include": [
-    "test/**/*.ts"
+    "../src/**/*.ts"
   ]
 }
