--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "storeon": "^2.0.0"
   },
   "devDependencies": {
+    "@arkweid/lefthook": "^0.7.2",
     "@logux/eslint-config": "36.1.3",
     "@size-limit/preset-small-lib": "^4.5.0",
     "@types/jest": "^25.2.1",
@@ -50,9 +51,7 @@
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-unicorn": "^19.0.1",
-    "husky": "^4.2.5",
     "jest": "^26.0.1",
-    "lint-staged": "^10.2.2",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.7.6",
     "rollup-plugin-terser": "^5.3.0",
@@ -62,17 +61,6 @@
     "ts-jest": "^25.4.0",
     "typedoc": "^0.17.6",
     "typescript": "^3.8.3"
-  },
-  "lint-staged": {
-    "**/*.ts": [
-      "eslint --fix",
-      "git add"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "engines": {
     "node": ">8"
