--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.2",
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
     "@logux/eslint-config": "42.3.0",
     "@size-limit/preset-small-lib": "^4.9.1",
     "@types/jest": "^26.0.18",
@@ -92,5 +94,10 @@
       "@typescript-eslint/no-explicit-any": "off",
       "@typescript-eslint/explicit-function-return-type": "off"
     }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   }
 }
