--- a/configs/tsconfig.json
+++ b/configs/tsconfig.json
@@ -3,7 +3,7 @@
     "moduleResolution": "node",
     "target": "es6",
     "module":"es2015",
-    "lib": ["es7"],
+    "lib": ["es7", "dom"],
     "strict": true,
     "outDir": "../dist",
     "types": ["node"]
