--- a/package.json
+++ b/package.json
@@ -36,35 +36,34 @@
     "rxjs": "^7.0.0"
   },
   "devDependencies": {
-    "@arkweid/lefthook": "^0.7.2",
-    "@commitlint/cli": "^12.0.1",
-    "@commitlint/config-conventional": "^12.0.1",
-    "@logux/eslint-config": "45.2.1",
-    "@size-limit/preset-small-lib": "^4.10.1",
-    "@types/jest": "^26.0.22",
+    "@arkweid/lefthook": "^0.7.6",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
+    "@logux/eslint-config": "45.4.6",
+    "@size-limit/preset-small-lib": "^5.0.1",
+    "@types/jest": "^26.0.23",
     "@types/node": "^14.14.37",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
-    "eslint": "^7.23.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.3.2",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
+    "eslint": "^7.30.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prefer-let": "^1.1.0",
-    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-unicorn": "^29.0.0",
-    "jest": "^26.6.3",
+    "eslint-plugin-unicorn": "^34.0.1",
+    "jest": "^27.0.6",
     "npm-run-all": "^4.1.5",
-    "rollup": "^2.43.1",
+    "rollup": "^2.52.7",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
-    "rxjs": "^6.6.7",
-    "size-limit": "^4.10.1",
+    "size-limit": "^5.0.1",
     "storeon": "^3.1.4",
-    "ts-jest": "^26.5.4",
-    "typedoc": "^0.20.34",
-    "typescript": "^4.2.3"
+    "ts-jest": "^27.0.3",
+    "typedoc": "^0.21.2",
+    "typescript": "^4.3.5"
   },
   "engines": {
     "node": ">=12"
@@ -72,11 +71,13 @@
   "size-limit": [
     {
       "path": "lib/cjs/index.js",
-      "limit": "611 B"
+      "limit": "611 B",
+      "ignore": ["rxjs"]
     },
     {
       "path": "lib/esm/index.js",
-      "limit": "464 B"
+      "limit": "464 B",
+      "ignore": ["rxjs"]
     }
   ],
   "eslintConfig": {
